apps/base/filestash/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filestash
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
