apps/base/filestash/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filestash
  namespace: filestash
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`filestash.rmtt.tech`)
      kind: Rule
      services:
        - name: filestash
          port: 8334
  tls:
    certResolver: cfresolver
